fix: combine svg paths of the logo icon to get rid of weird gaps

--- a/src/sections/Header/Header.module.css
+++ b/src/sections/Header/Header.module.css
@@ -13,3 +13,7 @@
 .logo {
   height: 3rem;
 }
+
+header {
+  background-color: var(--grey-2);
+}
